Add Grafana Dashboard Controller
